--- a/projeto_clinica/pubspec.yaml
+++ b/projeto_clinica/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - images/doctor.png
     - images/exams.png
     - images/payments.png
+    - images/hospital.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
